@@ -21,6 +21,11 @@ AC_CHECK_PROG([FILE_COMM], "file", "yes", "no")
 if test "$FILE_COMM" = "no"; then
 	AC_MSG_ERROR([Unable to find the file program need to build magic databases])
 fi
+AC_CHECK_MEMBER([struct fanotify_response_info_audit_rule.rule_number],
+		[perm=yes], [perm=no], [[#include <linux/fanotify.h>]])
+if test $perm = "yes"; then
+	AC_DEFINE(FAN_AUDIT_RULE_NUM, 1,[Define if kernel supports audit rule numbers])
+fi
 
 echo .
 echo Checking compiler options
